# os_lab2

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: cache.h  file_worker.h  io_lat_write.h  tools.h
src/: cache.cpp  file_worker.cpp  io_lat_write.cpp  io_lat_write_w_cache.cpp  tools.cpp
src/tests/: test_cache.cpp  test_file_worker.cpp  test_io_lat_write.cpp
